--- a/index.html
+++ b/index.html
@@ -2,116 +2,130 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>Alarm Challenge</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wake Up Challenge</title>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      margin: 0; padding: 2rem;
-      background: #f7f7f7;
-      display: flex; flex-direction: column;
-      justify-content: center; align-items: center;
-      height: 100vh; box-sizing: border-box;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #f9f9f9;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      padding: 1rem;
     }
-    h1 { font-size: 1.5rem; margin-bottom: 1rem; }
-    #question { font-size: 2rem; margin-bottom: 1rem; }
-    input[type=number] {
-      font-size: 1.5rem;
-      padding: 0.5rem;
-      width: 6rem;
+    .card {
+      background: white;
+      padding: 2rem;
+      border-radius: 1.5rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       text-align: center;
+      max-width: 400px;
+      width: 100%;
+    }
+    input[type="number"] {
+      font-size: 1.25rem;
+      padding: 0.5rem;
+      margin-top: 1rem;
+      width: 100%;
+      box-sizing: border-box;
     }
     button {
       margin-top: 1rem;
-      font-size: 1.25rem;
-      padding: 0.5rem 1.5rem;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border: none;
+      background-color: #007AFF;
+      color: white;
+      border-radius: 0.75rem;
+      cursor: pointer;
     }
-    #complete { font-size: 1.25rem; color: green; margin-top: 1rem; }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <h1>Wake-Up Challenge</h1>
-  <div id="question"></div>
-  <input id="answer" type="number" inputmode="numeric" />
-  <button onclick="submitAnswer()">Submit</button>
-  <div id="complete"></div>
+  <div class="card">
+    <h2 id="prompt">Loading...</h2>
+    <input type="number" id="answer" inputmode="numeric" />
+    <button onclick="submitAnswer()">Submit</button>
+    <p id="feedback"></p>
+  </div>
 
   <script>
-    // Block access outside 5–10am local time
-    const hour = new Date().getHours();
-    if (hour < 5 || hour >= 10) {
-      document.body.innerHTML = '<div style="text-align:center;font-size:1.5rem;">Access restricted to 5am–10am.</div>';
-    }
-
-    const questionEl = document.getElementById("question");
-    const answerInput = document.getElementById("answer");
-    const completeEl = document.getElementById("complete");
-
+    let questions = [];
     let currentIndex = 0;
-    let currentAnswer = 0;
-    const totalQuestions = 3;
 
-    function getRandomInt(min, max) {
-      return Math.floor(Math.random() * (max - min + 1)) + min;
-    }
-
-    function getNonDivisibleBy5(min, max) {
+    function getRandomInt(min, max, notDivisibleBy5 = false) {
       let num;
       do {
-        num = getRandomInt(min, max);
-      } while (num % 5 === 0);
+        num = Math.floor(Math.random() * (max - min + 1)) + min;
+      } while (notDivisibleBy5 && num % 5 === 0);
       return num;
     }
 
     function generateQuestion() {
-      const operators = ["+", "-", "*"];
-      const operator = operators[Math.floor(Math.random() * operators.length)];
-      let a, b;
+      const type = ["add", "sub", "mul"][Math.floor(Math.random() * 3)];
 
-      if (operator === "+" || operator === "-") {
-        a = getNonDivisibleBy5(51, 999);
-        b = getNonDivisibleBy5(51, 999);
-      } else if (operator === "*") {
-        a = getRandomInt(10, 50);
-        if (Math.random() < 0.5) {
-          b = getRandomInt(2, 10);
-        } else {
-          const possibleB = [15, 20, 25, 30, 35, 40, 45, 50];
-          b = possibleB[Math.floor(Math.random() * possibleB.length)];
-        }
+      if (type === "add" || type === "sub") {
+        let a = getRandomInt(51, 999, true);
+        let b = getRandomInt(51, 999, true);
+        if (type === "sub" && b > a) [a, b] = [b, a]; // Ensure non-negative
+        return {
+          question: `${a} ${type === "add" ? "+" : "−"} ${b}`,
+          answer: type === "add" ? a + b : a - b
+        };
+      } else {
+        let a = getRandomInt(10, 50);
+        let b;
+        do {
+          b = getRandomInt(2, 50);
+        } while (b > 10 && b % 5 !== 0);
+        return {
+          question: `${a} × ${b}`,
+          answer: a * b
+        };
       }
-
-      currentAnswer = eval(`${a} ${operator} ${b}`);
-      return `${a} ${operator} ${b} = ?`;
     }
 
-    function showNextQuestion() {
-      answerInput.value = "";
-      questionEl.textContent = generateQuestion();
-      answerInput.focus();
+    function loadQuestions() {
+      for (let i = 0; i < 3; i++) {
+        questions.push(generateQuestion());
+      }
+      showQuestion();
+    }
+
+    function showQuestion() {
+      if (currentIndex < questions.length) {
+        document.getElementById("prompt").innerText = questions[currentIndex].question;
+        document.getElementById("answer").value = "";
+        document.getElementById("feedback").innerText = "";
+      } else {
+        document.getElementById("prompt").innerText = "✅ Task complete!";
+        document.querySelector("input").classList.add("hidden");
+        document.querySelector("button").classList.add("hidden");
+
+        fetch("https://alarmclock-dopk.onrender.com/mark-complete", {
+          method: "POST"
+        });
+      }
     }
 
     function submitAnswer() {
-      const userAnswer = parseInt(answerInput.value);
-      if (userAnswer === currentAnswer) {
+      const userAnswer = parseInt(document.getElementById("answer").value);
+      const correct = questions[currentIndex].answer;
+      if (userAnswer === correct) {
         currentIndex++;
-        if (currentIndex >= totalQuestions) {
-          fetch("https://alarmclock-dopk.onrender.com/mark-complete", { method: "POST" });
-          questionEl.textContent = "✔️ Task complete!";
-          answerInput.style.display = "none";
-          document.querySelector("button").style.display = "none";
-          completeEl.textContent = "You may now disable the alarm.";
-        } else {
-          showNextQuestion();
-        }
+        showQuestion();
       } else {
-        alert("Incorrect, try again.");
-        answerInput.value = "";
-        answerInput.focus();
+        document.getElementById("feedback").innerText = "❌ Incorrect, try again.";
       }
     }
 
-    showNextQuestion();
+    loadQuestions();
   </script>
 </body>
 </html>
