--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alarm Task</title>
+  <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
@@ -42,6 +43,10 @@
       font-size: 1rem;
       color: #555;
     }
+    #reader {
+      width: 100%;
+      margin-top: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -69,11 +74,10 @@
         b = randomInt(51, 999, n => n % 5 !== 0);
       } else if (op === "-") {
         a = randomInt(51, 999, n => n % 5 !== 0);
-        b = randomInt(51, a - 1, n => n % 5 !== 0); // b < a to avoid negatives
+        b = randomInt(51, a - 1, n => n % 5 !== 0); // b < a
       } else if (op === "*") {
         a = randomInt(10, 50);
-        const bPool = Array.from({ length: 9 }, (_, i) => i + 2)
-          .concat([15, 20, 25, 30, 35, 40, 45, 50]);
+        const bPool = Array.from({ length: 9 }, (_, i) => i + 2).concat([15, 20, 25, 30, 35, 40, 45, 50]);
         b = bPool[Math.floor(Math.random() * bPool.length)];
       }
 
@@ -126,27 +130,51 @@
 
       taskDiv.innerHTML = `
         <p class="hint">QR Hint: <strong>${hint}</strong></p>
-        <input type="text" id="qrValue" placeholder="Scan QR and paste value" />
+        <div id="reader"></div>
+        <p>Or paste QR value manually:</p>
+        <input type="text" id="qrValue" placeholder="Paste QR value" />
         <button id="verify">Verify QR</button>
       `;
+
+      const reader = new Html5Qrcode("reader");
+      reader.start(
+        { facingMode: "environment" },
+        { fps: 10, qrbox: 250 },
+        async (decodedText) => {
+          await verifyQR(decodedText, reader);
+        },
+        error => {
+          // ignore scan errors
+        }
+      ).catch(err => {
+        console.error("Camera failed:", err);
+      });
 
       document.getElementById("verify").onclick = async () => {
         const value = document.getElementById("qrValue").value.trim();
         if (!value) return alert("Please enter a value.");
+        await verifyQR(value, reader);
+      };
+    }
 
+    async function verifyQR(value, reader) {
+      try {
         const res = await fetch(`${backendURL}/qr-verify`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ value })
         });
-
         const result = await res.json();
         if (result.ok) {
+          reader?.stop();
           document.getElementById("task").innerHTML = `<p>✅ QR verified!</p>`;
+          await submitComplete();
         } else {
           alert(result.message || "QR verification failed.");
         }
-      };
+      } catch (err) {
+        alert("Verification error.");
+      }
     }
 
     async function main() {
